# Gaello-Consumer

./: .dockerignore  Dockerfile  README.md  pyproject.toml
consumer/: ops.py
graph/: _types.py  cypher.py  embeddings.py  graph.py  handler.py  singleshot.py
src/: main.py
utils_consumer/: envHandler.py  logger.py
